--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = plerup/EspSoftwareSerial@^6.8.5
-
-
+lib_deps = 
+	plerup/EspSoftwareSerial@^6.8.5
 monitor_port = COM19
 monitor_speed = 115200
-;upload_port = COM19
-;upload_speed = 115200
