speed limiter / settings save / current calibration

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ lib_deps =
 	plerup/EspSoftwareSerial@^6.8.5
 monitor_port = COM19
 monitor_speed = 115200
+
+;board_build.partitions = partition2.csv
