speed limiter / settings save / current calibration

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,6 @@ lib_deps =
 monitor_port = COM19
 monitor_speed = 115200
 
-;board_build.partitions = partition2.csv
+upload_speed = 921600
+
+board_build.partitions = partition2.csv
